--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.1.12
   location: ^4.4.0
+  google_sign_in: ^5.4.1
 
 dev_dependencies:
   flutter_test:
