--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   google_maps_flutter: ^2.1.12
   location: ^4.4.0
   google_sign_in: ^5.4.1
+  firebase_auth: ^2.0.0
+  provider: ^6.0.4
+  cloud_firestore: ^3.1.9
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/google_logo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
